# gettingstartedwith

./: .gitignore  LICENSE  README.md
c++/clibrary/: mean.c
c/checkavx/: cchavx.c
c/clibrary/: app.c  dynamically_linked  libmean.so.1.0.1  statically_linked
cpp/app/: app.ino
cpp/crow/clionh/: .gitignore  CMakeLists.txt  main.cpp
cpp/crow/hello.world/: .gitignore  CMakeLists.txt  helloworld  helloworld.cpp
cpp/linking/simple/: CMakeLists.txt
cpp/linking/simple/lib/: mymathfunc.cc  mymathfunc.hpp
cpp/linking/simple/src/: main.cc
cpp/linking/simple/test/: test_mymathfunc.cc
mqtt/mqttpacketgen/: app.js  package-lock.json  package.json  parser.js
python/mqtt/: README.md  app.py
ruby/at.sms/: Gemfile  sms.rb
ruby/ruby.post/: payments.rb
scala/hello/hello-scala/: build.sbt
scala/hello/hello-scala/src/main/scala/: Main.scala
var/add.ons.create/docs/stats-addon/: atlassian-connect.json  config.json  package-lock.json  package.json
var/add.ons.create/hello/hellobit/: atlassian-connect.json  config.json  package.json
var/add.ons.create/hello/hellobit/routes/: index.js
var/add.ons.create/hello/hellobit/views/: connect-example.hbs
var/vs.code.ext/hello.world/helloworldext/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
