cmake_minimum_required(VERSION 2.8)
project (helloworld)
set(CMAKE_CXX_STANDARD 11)
set(BOOST_ROOT "/mnt/c/boost")
set(BOOST_INCLUDE_DIR "${Boost_ROOT}/include/boost-1_65_1")
message("BOOST_INCLUDE_DIR:" ${BOOST_INCLUDE_DIR})
set(BOOST_USE_STATIC_LIBS OFF) 
set(BOOST_USE_MULTITHREADED ON)  
set(BOOST_USE_STATIC_RUNTIME OFF)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
LINK_DIRECTORIES(${BOOST_LIBRARY_DIRS})
add_definitions(-DBOOST_ALL_NO_LIB)
set(SOURCE_FILES helloworld.cpp crow_all.h)
link_libraries(pthread)
link_libraries(boost_system)
add_executable(helloworld helloworld.cpp)